--- a/scss/input.scss
+++ b/scss/input.scss
@@ -14,6 +14,8 @@
 @import 'pages/home/about';
 @import 'pages/home/session-info';
 @import 'pages/home/camp-promos';
+@import 'pages/home/example';
+@import 'pages/home/sessions';
 @import 'pages/home/home-cta';
 @import 'pages/home/gallery';
 @import 'pages/camp-page';
@@ -22,6 +24,7 @@
 @import 'pages/contact-page';
 @import 'pages/registration';
 @import 'layout/footer';
+@import 'pages/404-page';
 
 
 
