--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -27,10 +27,14 @@ footer {
 	}
 
 	a {
-		font-style: italic;
 		margin: 0 18px 0 0;
 		padding: 0 18px 0 0;
 		border-right: 1px solid #000;
+		font-family: "balboa", sans-serif;
+		text-transform: uppercase;
+		color: #fff;
+		font-weight: 500;
+		letter-spacing: 0.7px;
 
 		@media screen and (max-width: 600px) {
 			border-right: none;
