--- a/scss/pages/_contact-page.scss
+++ b/scss/pages/_contact-page.scss
@@ -16,6 +16,11 @@ section.contact-page {
 		background-size: cover;
 		background-position: center 660px;
 		box-shadow: inset 0 -83px 120px rgba(0,0,0,0.65);
+
+		@media screen and (max-width: 1100px) {
+			height: 200px;
+			background-position: center center;
+		}
 	}
 	
 	h2 {
@@ -29,7 +34,7 @@ section.contact-page {
 		margin: 0 0 30px;
 	}
 
-	p {
+	p, div#gform_confirmation_message_1 {
 		font-family: "tenso",sans-serif;
 		font-size: 17px;
 		font-weight: 200;
