--- a/scss/pages/_successful-transaction.scss
+++ b/scss/pages/_successful-transaction.scss
@@ -19,7 +19,31 @@ section.successful-transaction {
 		text-align: center;
 		text-transform: uppercase;
 		letter-spacing: 1px;
-		margin: 20px 0 35px;
+		margin: 20px 0 26px;
+	}
+
+	a.receipt {
+	    border: 2px solid #D0011B;
+	    color: $red;
+	    padding: 17px 14px 16px 15px;
+	    font-size: 14px;
+	    text-transform: uppercase;
+	    letter-spacing: 1.5px;
+	    border-radius: 3px;
+	    line-height: 15px;
+	    margin-bottom: 7px;
+	    display: inline-block;
+	    font-weight: 400;
+	    font-family: "balboa",sans-serif;
+
+		&:hover, &:focus, &:active {
+			text-decoration: none;
+		}
+
+		&:hover {
+			background: $red;
+			color: #fff;
+		}
 	}
 
 	h3 {
@@ -34,11 +58,31 @@ section.successful-transaction {
 	    font-weight: 200;
 	    letter-spacing: -0.3px;
 	    margin: 0 0 3px;
+
+	    &.side-note {
+			font-size: 13px;
+			margin: 0 0 35px;
+	    }
+
+	    &.date {
+	    	margin: 30px 0 22px;
+	    }
+
+	    &.sessions {
+	    	font-size: 15px;
+	    }
+
+	    &.green {
+	    	color: #6bb05e;
+			font-weight: 500;
+			font-size: 22px;
+			letter-spacing: 0.3px;
+		}
 	}
 
 	.camp-info {
 		background: #f5f5f5;
-		padding: 20px 25px;
+		padding: 20px 16px;
 		margin-top: 40px;
 
 		h5 {
@@ -49,14 +93,19 @@ section.successful-transaction {
 
 		ul {
 			padding-left: 20px;
+			margin-bottom: 0;
 
 			li {
 				font-family: "tenso",sans-serif;
-				font-size: 17px;
+				font-size: 16px;
 				font-weight: 400;
 				letter-spacing: -0.3px;
 				margin: 0 0 12px;
 				padding: 0 0 0 5px;
+
+				&:last-child {
+					margin-bottom: 0;
+				}
 			}
 		}
 	}
