--- a/scss/pages/home/_about.scss
+++ b/scss/pages/home/_about.scss
@@ -7,10 +7,14 @@ pages/home/about.scss
 
 
 section.about {
-	padding: 60px 0 20px;
+	padding: 70px 0 40px;
 
 	@media screen and (max-width: 991px) {
 		padding: 40px 0 0;
+	}
+
+	.row {
+		padding: 0 1.875rem;
 	}
 
 	h2, p {
@@ -18,24 +22,35 @@ section.about {
 	}
 
 	h2 {
-	    margin: 0 0 45px;
-	    font-family: "balboa-plus-fill",sans-serif;
-	    font-weight: normal;
-	    font-size: 45px;
+	    margin: 0 0 10px 0px;
+	    font-size: 15px;
 	    text-align: center;
+	    font-family: "balboa",sans-serif;
+	    letter-spacing: 0.5px;
+	    text-transform: uppercase;
 
-	    @media screen and (max-width: 991px) {
-	    	text-align: left;
-	    	margin: 0 0 25px;
+	    @media screen and (max-width: 1199px) {
+	    	font-size: 13px;
 	    }
-
-	    @media screen and (max-width: 500px) {
-	    	font-size: 38px;
+	    @media screen and (max-width: 991px) {
+	    	font-size: 15px;
+	    }
+	   	@media screen and (max-width: 450px) {
+	    	font-size: 13px;
 	    }
 	}
 
 	h3 {
-    	margin: 0 0 20px;
+		font-family: "balboa-plus-fill",sans-serif;
+		margin: 0 0 30px;
+		text-transform: uppercase;
+		font-weight: normal;
+		font-size: 36px;
+		text-align: left;
+		padding-top: 10px;
+		padding-left: 15px;
+		border-left: 2px solid #D0011B;
+		line-height: 0.85;
 	}
 
 	p {
@@ -54,101 +69,101 @@ section.about {
 	    		margin: 0 0 30px;
 	    	}
 	    }
-
-	    &.caption {
-			font-size: 14px;
-			text-align: center;
-			margin: 4px 0 4px;
-			font-weight: 200;
-			font-family: "tenso",sans-serif;
-			border: none;
-			padding: 0;
-
-			@media screen and (max-width: 767px) {
-				max-width: 100%;
-			}
-	    }
-
-	    &.disclaimer {
-			clear: both;
-			max-width: 100%;
-			margin: 0 0 0px;
-			padding: 35px 0 0 0;
-			letter-spacing: -0.4px;
-			font-weight: 300;
-			font-size: 14px;
-
-			span {
-				color: #D0011B;
-			}
-
-			a {
-				text-decoration: none;
-				color: #000;
-				border-bottom: 1px solid #000;
-				padding:  0 0 0;
-
-				&:hover {
-					text-decoration: none;
-					color: #206EB5;
-					border-color: #206EB5;
-				}
-			}
-	    }
 	}
 
-	.left {
-		width: 55%;
-		margin: 0 5% 0 0;
-		float: left;
+	ul {
+		padding: 0;
+		list-style-type: none;
 
-		@media screen and (max-width: 767px) {
-			width: 95%;
-			float: none;
-			margin: 0 auto;
+		@media screen and (max-width: 991px) {
+			margin: 40px 0 0;
+		}
+
+		li {
+		    font-size: 17px;
+		    font-weight: 300;
+		    margin: 0 0 40px;
+		    letter-spacing: -0.2px;
+		    font-family: "tenso",sans-serif;
+		    position: relative;
+		    padding: 45px 20px 0px;
+		    width: 33.33333%;
+		    float: left;
+		    min-height: 88px;
+
+		    @media screen and (max-width: 767px) {
+		    	width: 50%;
+		    }
+
+		    i.fa {
+			    font-size: 26px;
+			    position: absolute;
+			    left: 50%;
+			    top: 0;
+			    margin: 0 0 0 -13px;
+			    color: #ddd;
+		    }
 		}
 	}
 
-	.right {
-		width: 40%;
-		float: left;
+	a.thumbnail {
+		position: relative;
+		margin: 0 0 0 13%;
 
-		@media screen and (max-width: 767px) {
-			width: 95%;
-			float: none;
+		img {
+			width: 76%;
 			margin: 0 auto;
 		}
 
-		a {
-			position: relative;
+		&:hover {
 
-			&:hover {
+			span.play-button {
+				opacity: 1.0;
+				height: 70px;
+				width: 70px;
 
-				span.play-button{
-					opacity: 1.0;
-					height: 63px;
-					width: 63px;
-
-					&:before {
-						margin-left: 18px;
-						font-size: 30px;
-					}
+				&:before {
+					top: 7px;
+					left: 21px;
 				}
 			}
-		}
 
-		span.play-button {
+			img {
+				/*box-shadow: 1px 1px 15px rgba(0,0,0,0.6);*/
+			}
+		}
+	}
+
+	span.play-button {
+	    position: absolute;
+	    border-radius: 100%;
+	    height: 68px;
+	    width: 68px;
+	    background: $red;
+	    top: 50%;
+	    left: 50%;
+	    margin-top: -34px;
+	    margin-left: -34px;
+	    border: 4px solid #fff;
+	    opacity: 0.8;
+	    -webkit-transition-duration: 0.25s;
+	    transition-duration: 0.25s;
+	    -moz-transition-property: all 0.25s ease-in-out;
+	    -ms-transition-property: all 0.25s ease-in-out;
+	    -o-transition-property: all 0.25s ease-in-out;
+	    -webkit-transition-property: all 0.25s ease-in-out;
+	    transition-property: all 0.25s ease-in-out;
+	    -moz-transition-timing-function: ease-in-out;
+	    -o-transition-timing-function: ease-in-out;
+	    -webkit-transition-timing-function: ease-in-out;
+	    transition-timing-function: ease-in-out;
+
+		&:before {
+			content: "\f04b";
+			font-family: FontAwesome;
+			color: #fff;
+			font-size: 33px;
 			position: absolute;
-			border-radius: 100%;
-			height: 60px;
-			width: 60px;
-			background: #000;
-			top: 50%;
-			left: 50%;
-			margin-top: -12px;
-			margin-left: -30px;
-			border: 4px solid #fff;
-			opacity: 0.7;
 			-webkit-transition-duration: 0.25s;
 			transition-duration: 0.25s;
 			-moz-transition-property: all 0.25s ease-in-out;
@@ -160,48 +175,8 @@ section.about {
 			-o-transition-timing-function: ease-in-out;
 			-webkit-transition-timing-function: ease-in-out;
 			transition-timing-function: ease-in-out;
-
-			&:before {
-				content: "\f04b";
-				font-family: FontAwesome;
-				color: #fff;
-				font-size: 28px;
-				position: absolute;
-				-webkit-transition-duration: 0.25s;
-				transition-duration: 0.25s;
-				-moz-transition-property: all 0.25s ease-in-out;
-				-ms-transition-property: all 0.25s ease-in-out;
-				-o-transition-property: all 0.25s ease-in-out;
-				-webkit-transition-property: all 0.25s ease-in-out;
-				transition-property: all 0.25s ease-in-out;
-				-moz-transition-timing-function: ease-in-out;
-				-o-transition-timing-function: ease-in-out;
-				-webkit-transition-timing-function: ease-in-out;
-				transition-timing-function: ease-in-out;
-				margin-top: 6px;
-				margin-left: 17px;
-			}
+			left: 20px;
+			top: 6px;
 		}
-	}
-
-	ul {
-		padding-left: 15px;
-		padding-right: 30px;
-
-		li {
-		    font-size: 17px;
-		    font-weight: 300;
-		    margin: 0 0 15px;
-		    letter-spacing: -0.2px;
-		    font-family: "tenso",sans-serif;
-		}
-	}
-
-	img {
-	    width: 100%;
-	    margin-top: 35px;
-	    /* border: 7px solid #f2f2f2; */
-	    border-radius: 0px;
-	    /* box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.15), -1px -1px 0px #eee; */
 	}
 }
