--- a/scss/pages/home/_gallery.scss
+++ b/scss/pages/home/_gallery.scss
@@ -6,14 +6,21 @@ pages/home/gallery.scss
 
 
 section.gallery {
-    margin: 0px 0 30px;
-    background: #fff;
+	padding: 0 0 40px;
+    margin: 0;
+    background: #e5e5e5;
     text-align: center;
 	
 	img {
-	    width: 29%;
-	    margin: 0 1%;
+	    width: calc(25% - 60px);
+	    margin: 0;
 	    display: inline-block;
+	    box-shadow: 1px 1px 15px rgba(0,0,0,0.5);
+	    border: 4px solid #fff;
+
+	    &:nth-child(1), &:nth-child(2), &:nth-child(3) {
+	    	margin-right: 20px;
+	    }
 
 	    @media screen and (max-width: 450px) {
 	    	width: 95%;
