--- a/scss/pages/home/_session-info.scss
+++ b/scss/pages/home/_session-info.scss
@@ -6,27 +6,19 @@ pages/home/session-info.scss
 
 
 section.session-info {
-	padding: 30px 0 25px;
-
-	.container {
-		padding-top: 55px;
-   		border-top: 1px solid #ebebeb;
-
-   		@media screen and (max-width: 767px) {
-   			padding-top: 0;
-   			border: none;
-   		}
-	}
+	padding: 35px 0 25px;
 
 	h3 {
+		font-family: "balboa-plus-fill",sans-serif;
 	    margin: 0 0 30px;
 	    text-transform: uppercase;
 	    font-weight: normal;
-	    font-size: 28px;
+	    font-size: 36px;
 	    text-align: left;
-	    padding-top: 7px;
+	    padding-top: 10px;
 	    padding-left: 15px;
 	    border-left: 2px solid $red;
+	    line-height: 0.85;
 
 		    @media screen and (max-width: 500px) {
 		    	font-size: 22px;
